[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/ui_elements/GameButton.gd" type="Script" id=1]
[ext_resource path="res://resources/ui/theme/ktg_theme.tres" type="Theme" id=2]







[node name="GameButton" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_GameButton_button_down"]
